# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  shader.h  texture.h  vapp.h  vgl.h
lib/: gin.cpp
shaders/: multi_lights_fs.glsl
src/: basic.cpp  box.cpp  multiLights.cpp  testCamera.cpp  texture.cpp  triangle.cpp  window.cpp
